# dpo_demo

./: .gitignore  COMPARISON_GUIDE.md  QWEN_CHECKLIST.md  QWEN_TRAINING_GUIDE.md  README.md  USAGE.md  config.py  evaluate.py  evaluate_comparison.py  main.py  pyproject.toml  slurm_job.sh  slurm_qwen_8b.sh  slurm_qwen_8b_test.sh  test_model.py  test_tracker.json  train_baselines.py  visualize.py
dpo/: __init__.py  data.py  loss.py  metrics.py  plotting.py  trainer.py
eval_results/: evaluation_results.json
examples/: local_test.sh  run_comparison.sh  slurm_large_model.sh  train_small_model.sh
