[project]
name = "dpo-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "tqdm>=4.67.1",
]
